--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ sqlite_parks_db.db
 requirements.txt
 venv.txt
 z_archive/*
+node_modules
+package*.json
+webpack.config.js
+/app/templates/_datalist.html
